add documentation for "VM operations overhead" in the "Event details" tab